--- a/simple/hello-taskRun.yaml
+++ b/simple/hello-taskRun.yaml
@@ -1,7 +1,8 @@
 apiVersion: tekton.dev/v1beta1
 kind: TaskRun
 metadata:
-  name: echo-hello-world-task-run
+  #name: echo-hello-world-task-run
+  generateName: echo-hello-world-task-run-
 spec:
   taskRef:
     name: echo-hello-world
