--- a/knative/deploy-image-as-knative-service.yaml
+++ b/knative/deploy-image-as-knative-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1alpha1
 kind: Task
 metadata:
-  name: deploy-using-kubectl
+  name: deploy-knative-using-kubectl
 spec:
   inputs:
     resources:
